--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
-    "start": "NODE_ENV=production node index"
+    "start": "NODE_ENV=production node index",
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.1",
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.4"
@@ -21,7 +24,11 @@
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.0.9",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "mocha": "^8.3.0",
+    "prettier": "^2.2.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.2.4",
+    "supertest": "^6.1.3"
   },
   "husky": {
     "hooks": {
